# MaaCatCafe

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: Makefile
assets/pipeline/: dialog.json  main.json  waitAD.json
cmake/: FetchMaaFramework.cmake
